# docs/swagger.json
@@ -6,11 +6,6 @@
     "paths": {
         "/product/list": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Get details product",
                 "consumes": [
                     "application/json"
@@ -23,13 +18,6 @@
                 ],
                 "summary": "Get details product",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Authorization",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "offset",
@@ -76,11 +64,6 @@
         },
         "/product/{id}": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Get details product",
                 "consumes": [
                     "application/json"
@@ -93,13 +76,6 @@
                 ],
                 "summary": "Get details product",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Authorization",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "campaign_id",
@@ -286,6 +262,9 @@
                 },
                 "short_description": {
                     "type": "string"
+                },
+                "unique_offset": {
+                    "type": "integer"
                 },
                 "updated_at": {
                     "type": "string"
